# BinaryFilesExercise

./: .gitignore  32BitsSetupAppsWt.bat  64BitsSetupAppsWt.bat  BinaryFiles_last_build_info
BinaryFiles/: CMakeLists.txt
BinaryFiles-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BinaryFilesExercise.sln  CMakeCache.txt  ListChainedExercise.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
BinaryFiles-build/AppBinaryFiles/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AppBinaryFiles.sln  AppBinaryFiles.vcxproj  AppBinaryFiles.vcxproj.filters  cmake_install.cmake
BinaryFiles/AppBinaryFiles/: AppTestDB.cpp  AppTestDB.h  CMakeLists.txt  User.h  UserComands.cpp  UserComands.h  UserDeleted.h  UserInterface.cpp  UserInterface.h  database.cpp  database.h  deleteDB.cpp  deleteDB.h  main.cpp
BinaryFiles/includeCMake/: AllProjsPreSettings.cmake
BinaryFiles/libDatabase/: CMakeLists.txt
